# minecraft-server-manager

./: .gitattributes  .gitignore  README.md  pyproject.toml
config/: agent.env.example  agent.linux.example.toml  agent.linuxgsm.example.toml  agent.onboarding.example.toml  controller.env.example  controller.example.toml  fleet.example  paper-update.env.example  update.env.example
deploy/polkit/: minecraft-manager-controller-poweroff.rules
deploy/scripts/: backup-minecraft  bootstrap-minecraft-manager  setup-minecraft-manager-tailscale  start-minecraft-server  update-minecraft-jar  update-minecraft-manager  update-minecraft-manager-fleet  update-minecraft-plugins
deploy/sudoers/: minecraft-manager  minecraft-manager-host-shutdown  minecraft-manager-linuxgsm  minecraft-manager-provisioning  minecraft-manager-updater
deploy/systemd/: mc-manager-agent-home-files.conf.example  mc-manager-agent-linuxgsm.conf  mc-manager-agent.service  mc-manager-controller.service  minecraft@.service
docs/: network-plugins.md
mc_manager/: __init__.py  agent.py  agent_registry.py  client.py  config.py  controller.py  discord_bot.py  discovery.py  file_manager.py  health.py  minecraft_query.py  paper_download.py  player_monitor.py  server_catalog.py  server_console.py  server_installer.py  server_registry.py  ups.py
mc_manager/static/: app.js  index.html  style.css
minecraft-audio/monkeycraft-lobby/: README.md  generate_lobby_track.py  monkeycraft_festival_of_the_skyways.nbs  monkeycraft_nexus_awaits.nbs
minecraft-plugins/monkey-lobby-music/: README.md  build.gradle.kts  settings.gradle.kts
minecraft-plugins/monkey-lobby-music/src/main/resources/: config.yml  plugin.yml
minecraft-plugins/monkey-portals/: build.gradle.kts
tests/: test_agent.py  test_config.py  test_controller_files.py  test_controller_registry.py  test_deployment.py  test_discord_bot.py  test_discovery.py  test_file_manager.py  test_health.py  test_minecraft_query.py  test_onboarding.py  test_paper_download.py  test_player_monitor.py  test_server_catalog.py  test_server_console.py  test_server_deletion.py  test_server_registry.py  test_server_software.py  test_ups.py
(+8 files in other folders)
